--- a/CLIENTE/UF1843/E6/css/stilos.css
+++ b/CLIENTE/UF1843/E6/css/stilos.css
@@ -11,6 +11,11 @@ body{
 	
 }
 
+#q{
+	background-color: black;
+	color: white;
+}
+
 
 .scale-up-center {
 	-webkit-animation: scale-up-center 2.5s ;
